gateway-api-cilium/gateway-api-interconnect.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: waypoint-test
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: hello-gateway
  namespace: waypoint-test
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-waypoint
  namespace: waypoint-test
spec:
  parentRefs:
    - name: hello-gateway
  rules:
    - backendRefs:
        - name: hello-waypoint
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-waypoint
  namespace: waypoint-test
spec:
  selector:
    app: caddy-waypoint
  ports:
    - name: http
      port: 8080
      targetPort: 8081
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hello-waypoint
  namespace: waypoint-test
  labels:
    app: caddy-waypoint
spec:
  selector:
    matchLabels:
      app: caddy-waypoint
  template:
    metadata:
      labels:
        app: caddy-waypoint
    spec:
      containers:
        - name: caddy
          image: caddy:2.9.1-alpine
          command:
            - caddy
            - reverse-proxy
            - --from
            - :8081
            - --to
            - cilium-gateway-hello-upstream:8082
            - --header-down
            - "X-Greeting: Hello waypoint!"
            - --access-log
          ports:
            - containerPort: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-internal
spec:
  controllerName: io.cilium/gateway-controller
  description: The default Cilium GatewayClass
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-internal
    namespace: waypoint-test
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: hello-upstream
  namespace: waypoint-test
spec:
  gatewayClassName: cilium-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 8082
