gateway-api-cilium/hello-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-backend
  namespace: waypoint-test
spec:
  parentRefs:
    - name: hello-upstream
      port: 8082
  rules:
    - backendRefs:
        - name: hello-backend
          port: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: hello-backend
  namespace: waypoint-test
spec:
  selector:
    app: caddy-backend
  ports:
    - name: http
      port: 8083
      targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-backend
  namespace: waypoint-test
  labels:
    app: caddy-backend
spec:
  selector:
    matchLabels:
      app: caddy-backend
  template:
    metadata:
      labels:
        app: caddy-backend
    spec:
      containers:
        - name: caddy
          image: caddy:2.9.1-alpine
          command:
            - caddy
            - respond
            - --listen
            - :8084
            - --body
            - Hello backend!
            - --access-log
          ports:
            - containerPort: 8084
